main/default/objects/API_Configuration__mdt/fields/Auth_URI__c.field-meta.xml
<CustomField>
    <fullName>Auth_URI__c</fullName>
    <label>Auth URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>