main/default/objects/API_Configuration__mdt/fields/Body_Request__c.field-meta.xml
<CustomField>
    <fullName>Body_Request__c</fullName>
    <label>Body Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>