main/default/objects/API_Configuration__mdt/fields/HeaderParams__c.field-meta.xml
<CustomField>
    <fullName>HeaderParams__c</fullName>
    <label>Header Params</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>