main/default/objects/API_Configuration__mdt/fields/Token_URI__c.field-meta.xml
<CustomField>
    <fullName>Token_URI__c</fullName>
    <label>Token URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>