main/default/objects/API_Configuration__mdt/listViews/Allcalles.listView-meta.xml
<ListView>
    <fullName>Allcalles</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Status__c</columns>
    <columns>Method__c</columns>
    <columns>Base_Url__c</columns>
    <columns>Endpoint__c</columns>
    <columns>HeaderParams__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Calls</label>
</ListView>